--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </p>
     </form>
 
-    <button id="goButton">Launch Payload!</button>
+    <button id="goButton">Push Payload!</button>
   </div>
 
   <h3>Result:</h3>
