--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="/web-fusee-launcher/favicon.ico">
   <title>Web Fusée Launcher</title>
   <style>
     body
